[package]
name = "Strand"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.6" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
nalgebra = { version = "0.34.1" }